--- a/website/all4animals/mysite/templates/mysite/base.html
+++ b/website/all4animals/mysite/templates/mysite/base.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="{% static 'css/bootswatch.css' %}">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link href='https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cosmo/bootstrap.min.css' rel='stylesheet'>
-    <title>All4animals</title>
+    <title>{% block title%} {%endblock%}</title>
 </head>
 
 <body>
-    <div class="contaner-fluid">
+    <div class="container-fluid">
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <a class="navbar-brand" href="#">
@@ -41,9 +41,14 @@
                         <a class="nav-link" href="#">Parcourir les annonces</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Hébergement</a>
+                        <a class="nav-link" href="/hebergement">Hébergement</a>
                     </li>
                 </ul>
+            </div>
+            <div class="col-md-1 offset-md-5 offset-sm-0">
+                <a class="navbar-profil" href="#">
+                    <img src="{% static 'assets/nav_footer/profil.png' %}" alt="logo All4animals" title="Logo">
+                </a>
             </div>
         </nav>
     </div>
