--- a/website/all4animals/static/css/base.css
+++ b/website/all4animals/static/css/base.css
@@ -2,6 +2,11 @@
     margin: 0;
     padding: 0;
 }
+
+.container-fluid{
+    margin: 0 !important;
+    padding: 0 !important;
+}
 /* CSS ABOUT PC AND MOBILE */
 nav li a {
     color: white !important;
@@ -22,8 +27,9 @@ nav .nav-item:hover {
     text-decoration: underline;
 }
 
-
-
+nav{
+    background: red;
+}
 
 
 /* CSS ABOUT PC ONLY */
@@ -32,9 +38,19 @@ nav .nav-item:hover {
         margin-left: 30px;
     }
 
+    nav .navbar-brand {
+        height: 132px !important;
+    }
+
     nav .navbar-brand img {
         width: 250px;
-        margin-top: -20px;
+        margin-top: -10px;
+        border: 4px solid white;
+        border-radius: 50%;
+    }
+
+    nav .navbar-profil img{
+        width: 70px;
     }
 }
 
