--- a/website/all4animals/mysite/templates/mysite/alert/browse_ad.html
+++ b/website/all4animals/mysite/templates/mysite/alert/browse_ad.html
@@ -1,9 +1,9 @@
 {% extends 'mysite/base.html' %}
 
 {% block title%} 
-Index
+Parcourir annonce
 {%endblock%}
 
 {% block body%} 
-<h2> Page d'accueil</h2>
+<h2> Parcourir les annonces </h2>
 {%endblock%}
