--- a/website/all4animals/mysite/templates/mysite/housing/housing_search.html
+++ b/website/all4animals/mysite/templates/mysite/housing/housing_search.html
@@ -1,9 +1,9 @@
 {% extends 'mysite/base.html' %}
 
 {% block title%} 
-Index
+Recherche Hebergement
 {%endblock%}
 
 {% block body%} 
-<h2> Page d'accueil</h2>
+<h2> Page Recherche Hebergement</h2>
 {%endblock%}
