--- a/website/all4animals/mysite/templates/mysite/alert/alert.html
+++ b/website/all4animals/mysite/templates/mysite/alert/alert.html
@@ -1,9 +1,9 @@
 {% extends 'mysite/base.html' %}
 
 {% block title%} 
-Index
+Alerte
 {%endblock%}
 
 {% block body%} 
-<h2> Page d'accueil</h2>
+<h2> Page d'alerte </h2>
 {%endblock%}
