--- a/website/all4animals/mysite/templates/mysite/housing/user_calendar.html
+++ b/website/all4animals/mysite/templates/mysite/housing/user_calendar.html
@@ -1,9 +1,9 @@
 {% extends 'mysite/base.html' %}
 
 {% block title%} 
-Index
+Calendrier de quelqu'un
 {%endblock%}
 
 {% block body%} 
-<h2> Page d'accueil</h2>
+<h2> Page calendrier de quelqu'un</h2>
 {%endblock%}
