--- a/website/all4animals/mysite/templates/mysite/profil/login.html
+++ b/website/all4animals/mysite/templates/mysite/profil/login.html
@@ -1,9 +1,9 @@
 {% extends 'mysite/base.html' %}
 
 {% block title%} 
-Index
+Login
 {%endblock%}
 
 {% block body%} 
-<h2> Page d'accueil</h2>
+<h2> Page login</h2>
 {%endblock%}
