--- a/website/all4animals/mysite/templates/mysite/profil/profil.html
+++ b/website/all4animals/mysite/templates/mysite/profil/profil.html
@@ -1,5 +1,9 @@
 {% extends 'mysite/base.html' %}
 
 {% block title%} 
-Hebergement
+Profil
+{%endblock%}
+
+{% block body%} 
+<h2> Page profil</h2>
 {%endblock%}
