--- a/website/all4animals/mysite/templates/mysite/base.html
+++ b/website/all4animals/mysite/templates/mysite/base.html
@@ -31,10 +31,7 @@
 
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/alerte">Alerte</a>
-                    </li>
-                    <!-- <li class="nav-item dropdown">
+                    <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="# role="button"
                             aria-haspopup="true" aria-expanded="false">Alerte</a>
                         <div class="dropdown-menu">
@@ -42,7 +39,7 @@
                             <a class="dropdown-item" href="#">J'ai trouvé un animal</a>
                             <a class="dropdown-item" href="#">J'ai vu un animal</a>
                         </div>
-                    </li> -->
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/annonce">Parcourir les annonces</a>
                     </li>
@@ -51,7 +48,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-md-1 offset-md-5 offset-sm-0">
+            <div class="nav_avatar">
                 <a class="navbar-profil" href="/profil">
                     <img src="{% static 'assets/nav_footer/profil.png' %}" alt="logo All4animals" title="Logo">
                 </a>
