--- a/website/all4animals/static/css/base.css
+++ b/website/all4animals/static/css/base.css
@@ -27,9 +27,7 @@ nav .nav-item:hover {
     text-decoration: underline;
 }
 
-nav{
-    background: red;
-}
+
 
 
 /* CSS ABOUT PC ONLY */
@@ -51,6 +49,12 @@ nav{
 
     nav .navbar-profil img{
         width: 70px;
+
+    }
+
+    .nav_avatar {
+        float: right;
+        margin-right: 30px;
     }
 }
 
@@ -58,5 +62,27 @@ nav{
 @media (max-width: 991px) {
     nav li a {
         margin-left: 15px;
+    }
+    
+    nav .navbar-profil img{
+        width: 35px;
+    }
+
+    nav .navbar-brand {
+        height: 55px !important;
+    }
+
+    nav .navbar-brand img {
+        width: 100px;
+        margin-top: -10px;
+        border: 1px solid white;
+        border-radius: 50%;
+    }
+}
+
+/* CSS INTO 991px and 1100 */
+@media (min-width: 992px) and (max-width: 1100px) {
+    nav li a {
+        font-size: 1.3em;
     }
 }
