--- a/website/all4animals/mysite/templates/mysite/base.html
+++ b/website/all4animals/mysite/templates/mysite/base.html
@@ -10,46 +10,54 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link href='https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cosmo/bootstrap.min.css' rel='stylesheet'>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
-    
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+        integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+        crossorigin="anonymous"></script>
+
     <title>{% block title%} {%endblock%}</title>
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="a4_container-fluid">
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="/">
-                <img src="{% static 'assets/nav_footer/logo.png' %}" alt="logo All4animals" title="Logo">
-            </a>
+        <nav class="a4_navbar">
+            <div class="a4_logo-nav">
+                <a href="/">
+                    <img src="{% static 'assets/nav_footer/logo.png' %}" alt="logo All4animals" title="Logo">
+                </a>
+            </div>
             <!-- button burger -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
-                aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <!-- ------------- -->
 
-            <div class="collapse navbar-collapse" id="navbarColor01">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="# role="button"
-                            aria-haspopup="true" aria-expanded="false">Alerte</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">J'ai perdu mon animal</a>
-                            <a class="dropdown-item" href="#">J'ai trouvé un animal</a>
-                            <a class="dropdown-item" href="#">J'ai vu un animal</a>
-                        </div>
+            <div class="a4_menu_web">
+                <ul class="a4_navbar-menu">
+                    <li class="a4_nav-item dropdown">
+                        <a class="a4_nav-link" href="/alerte">Créer une annonce</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/annonce">Parcourir les annonces</a>
+                    <li>|</li>
+                    <li class="a4_nav-item">
+                        <a class="a4_nav-link" href="/annonce">Parcourir les annonces</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/hebergement">Hébergement</a>
+                    <li>|</li>
+                    <li class="a4_nav-item">
+                        <a class="a4_nav-link" href="/hebergement">Hébergement</a>
                     </li>
                 </ul>
             </div>
-            <div class="nav_avatar">
-                <a class="navbar-profil" href="/profil">
+            <div class="a4_menu_mobil">
+                <div class="a4_block_burger">
+                    <img src="{% static 'assets/nav_footer/menu.png' %}"" alt=" menu_buger" class="a4_burger"
+                        title="menu_buger">
+                </div>
+                <div class="a4_menu_show">
+                    <ul>
+                        <li><a href="/alerte">Créer une annonce</a></li>
+                        <li><a href="/annonce">Parcourir les annonces</a></li>
+                        <li><a href="/hebergement">Hébergement</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="a4_nav_avatar">
+                <a class="a4_navbar-profil" href="/profil">
                     <img src="{% static 'assets/nav_footer/profil.png' %}" alt="logo All4animals" title="Logo">
                 </a>
             </div>
@@ -61,7 +69,7 @@
     <br>
     <br>
     {% block body%} {%endblock%}
-    
-</body>
 
+</body>
+<script src="{% static 'js/base.js' %}"></script>
 </html>
