--- a/website/all4animals/mysite/templates/mysite/base.html
+++ b/website/all4animals/mysite/templates/mysite/base.html
@@ -7,7 +7,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/bootswatch.css' %}">
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/nav.css' %}">
+    <link rel="stylesheet" href="{% static 'css/footer.css' %}">
     <link href='https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cosmo/bootstrap.min.css' rel='stylesheet'>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
@@ -69,7 +70,40 @@
     <br>
     <br>
     {% block body%} {%endblock%}
+    <footer class="footer">
+        <div class="block_menu">
+            <ul>
+                <li><a href="/alerte">Créer une annonce</a></li>
+                <li><a href="/annonce">Parcourir les annonces</a></li>
+                <li><a href="/hebergement">Hébergement</a></li>
+            </ul>
+        </div>
+        <div class="block_logo">
+                <a class="a4_logo" href="">
+                    <img src="{% static 'assets/footer/logo1.png' %}" alt="logo All4animals" title="Logo">
+                </a>
+                <a class="a4_logo" href="">
+                    <img src="{% static 'assets/footer/logo2.png' %}" alt="logo All4animals" title="Logo">
+                </a>
+                <a class="a4_logo" href="">
+                    <img src="{% static 'assets/footer/logo3.png' %}" alt="logo All4animals" title="Logo">
+                </a>
+                <a class="a4_logo" href="">
+                    <img src="{% static 'assets/footer/logo4.png' %}" alt="logo All4animals" title="Logo">
+                </a>
+                <a class="a4_logo" href="">
+                    <img src="{% static 'assets/footer/logo5.png' %}" alt="logo All4animals" title="Logo">
+                </a>
 
+        </div>
+        <div class="block_contact">
+            <ul>
+                <li><a href="/alerte">Nous contacter</a></li>
+                <li><a href="/annonce">Conditions générales</a></li>
+            </ul>
+
+        </div>
+    </footer>
 </body>
 <script src="{% static 'js/base.js' %}"></script>
 </html>
