--- a/website/all4animals/mysite/templates/mysite/base.html
+++ b/website/all4animals/mysite/templates/mysite/base.html
@@ -70,35 +70,39 @@
     <br>
     <br>
     {% block body%} {%endblock%}
-    <footer class="footer">
-        <div class="block_menu">
+    <footer class="a4_footer">
+        <div class="a4_block_menu">
             <ul>
                 <li><a href="/alerte">Créer une annonce</a></li>
                 <li><a href="/annonce">Parcourir les annonces</a></li>
                 <li><a href="/hebergement">Hébergement</a></li>
             </ul>
         </div>
-        <div class="block_logo">
+        <div class="a4_block_logo">
                 <a class="a4_logo" href="">
                     <img src="{% static 'assets/footer/logo1.png' %}" alt="logo All4animals" title="Logo">
                 </a>
+                <h2>|</h2>
                 <a class="a4_logo" href="">
                     <img src="{% static 'assets/footer/logo2.png' %}" alt="logo All4animals" title="Logo">
                 </a>
+                <h2>|</h2>
                 <a class="a4_logo" href="">
                     <img src="{% static 'assets/footer/logo3.png' %}" alt="logo All4animals" title="Logo">
                 </a>
+                <h2>|</h2>
                 <a class="a4_logo" href="">
                     <img src="{% static 'assets/footer/logo4.png' %}" alt="logo All4animals" title="Logo">
                 </a>
+                <h2>|</h2>
                 <a class="a4_logo" href="">
                     <img src="{% static 'assets/footer/logo5.png' %}" alt="logo All4animals" title="Logo">
                 </a>
 
         </div>
-        <div class="block_contact">
+        <div class="a4_block_contact">
             <ul>
-                <li><a href="/alerte">Nous contacter</a></li>
+                <li><a href="/contact">Nous contacter</a></li>
                 <li><a href="/annonce">Conditions générales</a></li>
             </ul>
 
