--- a/website/all4animals/static/css/footer.css
+++ b/website/all4animals/static/css/footer.css
@@ -36,7 +36,7 @@ footer li a:hover{
     justify-content: space-evenly;
 }
 
-/* CSS ABOUT PC ONLY */
+/* CSS ABOUT MOBILE ONLY */
 @media (max-width: 992px) {
     .a4_block_menu, .a4_block_contact{
        display:none;
