--- a/website/all4animals/mysite/templates/mysite/base.html
+++ b/website/all4animals/mysite/templates/mysite/base.html
@@ -79,21 +79,25 @@
             </ul>
         </div>
         <div class="a4_block_logo">
-                <a class="a4_logo" href="">
-                    <img src="{% static 'assets/footer/logo1.png' %}" alt="logo All4animals" title="Logo">
-                </a>
-                <a class="a4_logo" href="">
-                    <img src="{% static 'assets/footer/logo2.png' %}" alt="logo All4animals" title="Logo">
-                </a>
-                <a class="a4_logo" href="">
-                    <img src="{% static 'assets/footer/logo3.png' %}" alt="logo All4animals" title="Logo">
-                </a>
-                <a class="a4_logo" href="">
-                    <img src="{% static 'assets/footer/logo4.png' %}" alt="logo All4animals" title="Logo">
-                </a>
-                <a class="a4_logo" href="">
-                    <img src="{% static 'assets/footer/logo5.png' %}" alt="logo All4animals" title="Logo">
-                </a>
+            <a class="a4_logo" href="">
+                <img src="{% static 'assets/footer/logo1.png' %}" alt="logo All4animals" title="Logo">
+            </a>
+            <div class="horizontal_bar"></div>
+            <a class="a4_logo" href="">
+                <img src="{% static 'assets/footer/logo2.png' %}" alt="logo All4animals" title="Logo">
+            </a>
+            <div class="horizontal_bar"></div>
+            <a class="a4_logo" href="">
+                <img src="{% static 'assets/footer/logo3.png' %}" alt="logo All4animals" title="Logo">
+            </a>
+            <div class="horizontal_bar"></div>
+            <a class="a4_logo" href="">
+                <img src="{% static 'assets/footer/logo4.png' %}" alt="logo All4animals" title="Logo">
+            </a>
+            <div class="horizontal_bar"></div>
+            <a class="a4_logo" href="">
+                <img src="{% static 'assets/footer/logo5.png' %}" alt="logo All4animals" title="Logo">
+            </a>
 
         </div>
         <div class="a4_block_contact">
@@ -106,4 +110,5 @@
     </footer>
 </body>
 <script src="{% static 'js/base.js' %}"></script>
+
 </html>
