--- a/website/all4animals/static/css/footer.css
+++ b/website/all4animals/static/css/footer.css
@@ -36,6 +36,11 @@ footer li a:hover{
     justify-content: space-evenly;
 }
 
+.horizontal_bar{
+    height: 40px;
+    border: 1px solid white ;
+}
+
 /* CSS ABOUT MOBILE ONLY */
 @media (max-width: 992px) {
     .a4_block_menu, .a4_block_contact{
