--- a/website/all4animals/mysite/templates/mysite/base.html
+++ b/website/all4animals/mysite/templates/mysite/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'css/bootswatch.css' %}">
     <link rel="stylesheet" href="{% static 'css/nav.css' %}">
     <link rel="stylesheet" href="{% static 'css/footer.css' %}">
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
     <link href='https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cosmo/bootstrap.min.css' rel='stylesheet'>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
@@ -54,6 +55,7 @@
                         <li><a href="/alerte">Créer une annonce</a></li>
                         <li><a href="/annonce">Parcourir les annonces</a></li>
                         <li><a href="/hebergement">Hébergement</a></li>
+                        <li><a href="/contact">Nous contacter</a></li>
                     </ul>
                 </div>
             </div>
