--- a/website/all4animals/mysite/templates/mysite/contact.html
+++ b/website/all4animals/mysite/templates/mysite/contact.html
@@ -1,10 +1,42 @@
 {% extends 'mysite/base.html' %}
 
-{% block title%} 
+{% block title%}
 Contact
 {%endblock%}
 
-
-{% block body%} 
-<h2> Page nous contacter</h2>
+{% block body%}
+<div class="container">
+    <form action="/alerte" method="GET">
+        <fieldset>
+            <legend>Créer un message</legend>
+            <div class="form-group">
+                <label for="Email">Votre Email</label>
+                <input type="email" class="form-control" id="Email" aria-describedby="email" placeholder="Entrer email"
+                    name="email">
+            </div>
+            <div class="form-group">
+                <label for="Subject">Sujet</label>
+                <input type="text" class="form-control" id="Subject" aria-describedby="subject"
+                    placeholder="Entrer le titre de votre alerte" name="subject">
+            </div>
+            <div class="form-group row">
+                <label for="staticreponse" class="col-sm-2 col-form-label">Contact a propos de:</label>
+                <div class="col-sm-10">
+                    <input type="text" readonly="" class="form-control-plaintext" id="staticreponse"
+                        value="Reponse a propos de l'annonce 1220251 'Happy perdu rue saint blaise alencon'">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="description">Description de l'animal</label>
+                <textarea class="form-control" id="description" rows="3"
+                    placeholder="Description de l'animal"></textarea>
+            </div>
+            <div class="form-group">
+                <label for="photo">Photo</label>
+                <input type="file" class="form-control-file" id="photo" aria-describedby="fileHelp" name="photo">
+            </div>
+            <button type="submit" class="btn btn-primary">Valider</button>
+        </fieldset>
+    </form>
+</div>
 {%endblock%}
