--- a/website/all4animals/static/css/index.css
+++ b/website/all4animals/static/css/index.css
@@ -1,15 +1,49 @@
-.a4_container_alert{
+.a4_container_home{
     width: 50%;
+    height: 45vh;
     margin: auto;
-    background-color: ;
-    
+    background-color: #fcd5ba;
+    border-radius: 5px 100px / 120px;
+    padding-top: 20px;
+    padding-bottom: 30px;
 }
 
+.a4_container_home:hover{
+    border: 2px ridge #78c2ad;
+}
 
+.a4_writing img{
+    width: 60%;
+}
 
-
-.container_img_alert, .a4_writing_alert{
+.a4_container_img_alert, .a4_writing{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+}
+
+.a4_all_alert img{
+    width: 27%;
+}
+
+.a4_all_alert img[title="publication"]{
+    width: 25%;
+}
+
+/* CSS ABOUT MOBILE ONLY */
+@media (max-width: 992px) {
+    .a4_container_home{
+        height: 30vh;
+    }
+
+    .a4_container_img_alert img:nth-child(2n+1), .space{
+        display: none;
+    }
+
+    .a4_container_img_alert img{
+        width: 50% !important;
+    }
+    .a4_container_home img{
+        width: 60%;
+    }
 }
