--- a/website/all4animals/mysite/templates/mysite/alert/alert.html
+++ b/website/all4animals/mysite/templates/mysite/alert/alert.html
@@ -5,8 +5,8 @@ Alerte
 {%endblock%}
 
 {% block body%}
-<div class="container">
-    <form action="/alerte" method="GET">
+<div class="container a4_container">
+    <form action="/alerte" method="GET" class="a4_containt_form">
         <fieldset>
             <legend>Créer une alerte</legend>
             <div class="form-group">
