--- a/website/all4animals/static/css/alert_form.css
+++ b/website/all4animals/static/css/alert_form.css
@@ -28,3 +28,17 @@
 .form-group {
     padding-bottom: 30px !important;
 }
+
+@media (min-width: 992px) {
+    .a4_containt_form {
+        background: url("../assets/alerte/background.png");
+        background-size: cover;
+        background-repeat: no-repeat;
+        padding: 50px;
+    }
+
+    .a4_container {
+        max-width: 1500px !important;
+        width: 100% !important;
+    }
+}
