--- a/website/all4animals/mysite/templates/mysite/base.html
+++ b/website/all4animals/mysite/templates/mysite/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{% static 'css/footer.css' %}">
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
     <link rel="stylesheet" href="{% static 'css/alert_form.css' %}">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <link href='https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cosmo/bootstrap.min.css' rel='stylesheet'>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
@@ -61,7 +62,7 @@
                 </div>
             </div>
             <div class="a4_nav_avatar">
-                <a class="a4_navbar-profil" href="/profil">
+                <a class="a4_navbar-profil" href="/login">
                     <img src="{% static 'assets/nav_footer/profil.png' %}" alt="logo All4animals" title="Logo">
                 </a>
             </div>
