--- a/website/all4animals/mysite/templates/mysite/base.html
+++ b/website/all4animals/mysite/templates/mysite/base.html
@@ -11,13 +11,14 @@
     <link rel="stylesheet" href="{% static 'css/footer.css' %}">
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
     <link rel="stylesheet" href="{% static 'css/alert_form.css' %}">
-    <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <link rel="stylesheet" href="{% static 'css/contact_form.css' %}">
+    {% block link%} {%endblock%}
     <link href='https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cosmo/bootstrap.min.css' rel='stylesheet'>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
         integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
         crossorigin="anonymous"></script>
+
 
     <title>{% block title%} {%endblock%}</title>
 </head>
@@ -113,5 +114,6 @@
     </footer>
 </body>
 <script src="{% static 'js/base.js' %}"></script>
+{% block script%} {%endblock%}
 
 </html>
