--- a/website/all4animals/alert/templates/alert/base.html
+++ b/website/all4animals/alert/templates/alert/base.html
@@ -6,11 +6,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/bootswatch.css' %}">
+    <link rel="stylesheet" href="{% static 'static_alert/css/bootswatch.css' %}">
     <link rel="stylesheet" href="{% static 'css/nav.css' %}">
     <link rel="stylesheet" href="{% static 'css/footer.css' %}">
-    <link rel="stylesheet" href="{% static 'css/index.css' %}">
-    <link rel="stylesheet" href="{% static 'css/alert_form.css' %}">
+    <link rel="stylesheet" href="{% static 'static_alert/css/alert_form.css' %}">
     <link rel="stylesheet" href="{% static 'css/contact_form.css' %}">
     {% block link%} {%endblock%}
     <link href='https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cosmo/bootstrap.min.css' rel='stylesheet'>
@@ -21,7 +20,7 @@
 
 
     <title>{% block title%} {%endblock%}</title>
-</head>
+</head>è
 
 <body>
     <div class="a4_container-fluid">
@@ -29,7 +28,7 @@
         <nav class="a4_navbar">
             <div class="a4_logo-nav">
                 <a href="/">
-                    <img src="{% static 'assets/nav_footer/logo.png' %}" alt="logo All4animals" title="Logo">
+                    <img src="{% static 'static_alert/assets/nav_footer/logo.png' %}" alt="logo All4animals" title="Logo">
                 </a>
             </div>
             <!-- button burger -->
@@ -51,7 +50,7 @@
             </div>
             <div class="a4_menu_mobil">
                 <div class="a4_block_burger">
-                    <img src="{% static 'assets/nav_footer/menu.png' %}"" alt=" menu_buger" class="a4_burger"
+                    <img src="{% static 'static_alert/assets/nav_footer/menu.png' %}"" alt=" menu_buger" class="a4_burger"
                         title="menu_buger">
                 </div>
                 <div class="a4_menu_show">
@@ -65,7 +64,7 @@
             </div>
             <div class="a4_nav_avatar">
                 <a class="a4_navbar-profil" href="/login">
-                    <img src="{% static 'assets/nav_footer/profil.png' %}" alt="logo All4animals" title="Logo">
+                    <img src="{% static 'static_alert/assets/nav_footer/profil.png' %}" alt="logo All4animals" title="Logo">
                 </a>
             </div>
         </nav>
@@ -84,23 +83,23 @@
         </div>
         <div class="a4_block_logo">
             <a class="a4_logo" href="">
-                <img src="{% static 'assets/footer/logo1.png' %}" alt="logo All4animals" title="Logo">
+                <img src="{% static 'static_alert/assets/footer/logo1.png' %}" alt="logo All4animals" title="Logo">
             </a>
             <div class="horizontal_bar"></div>
             <a class="a4_logo" href="">
-                <img src="{% static 'assets/footer/logo2.png' %}" alt="logo All4animals" title="Logo">
+                <img src="{% static 'static_alert/assets/footer/logo2.png' %}" alt="logo All4animals" title="Logo">
             </a>
             <div class="horizontal_bar"></div>
             <a class="a4_logo" href="">
-                <img src="{% static 'assets/footer/logo3.png' %}" alt="logo All4animals" title="Logo">
+                <img src="{% static 'static_alert/assets/footer/logo3.png' %}" alt="logo All4animals" title="Logo">
             </a>
             <div class="horizontal_bar"></div>
             <a class="a4_logo" href="">
-                <img src="{% static 'assets/footer/logo4.png' %}" alt="logo All4animals" title="Logo">
+                <img src="{% static 'static_alert/assets/footer/logo4.png' %}" alt="logo All4animals" title="Logo">
             </a>
             <div class="horizontal_bar"></div>
             <a class="a4_logo" href="">
-                <img src="{% static 'assets/footer/logo5.png' %}" alt="logo All4animals" title="Logo">
+                <img src="{% static 'static_alert/assets/footer/logo5.png' %}" alt="logo All4animals" title="Logo">
             </a>
 
         </div>
@@ -113,7 +112,7 @@
         </div>
     </footer>
 </body>
-<script src="{% static 'js/base.js' %}"></script>
+<script src="{% static 'static_alert/js/base.js' %}"></script>
 {% block script%} {%endblock%}
 
 </html>
