--- a/website/all4animals/alert/templates/alert/index.html
+++ b/website/all4animals/alert/templates/alert/index.html
@@ -1,6 +1,11 @@
 {% extends 'alert/base.html' %}
 {% load static %}
 
+
+{% block link%} 
+<link rel="stylesheet" href="{% static 'css/index.css' %}">
+{%endblock%}
+
 {% block title%}
 Index
 {%endblock%}
