add css laura fix bug irfa

--- a/website/all4animals/alert/templates/alert/base.html
+++ b/website/all4animals/alert/templates/alert/base.html
@@ -7,10 +7,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'static_alert/css/bootswatch.css' %}">
-    <link rel="stylesheet" href="{% static 'css/nav.css' %}">
-    <link rel="stylesheet" href="{% static 'css/footer.css' %}">
+    <link rel="stylesheet" href="{% static 'static_alert/css/nav.css' %}">
+    <link rel="stylesheet" href="{% static 'static_alert/css/footer.css' %}">
     <link rel="stylesheet" href="{% static 'static_alert/css/alert_form.css' %}">
-    <link rel="stylesheet" href="{% static 'css/contact_form.css' %}">
+    <link rel="stylesheet" href="{% static 'static_alert/css/contact_form.css' %}">
     {% block link%} {%endblock%}
     <link href='https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cosmo/bootstrap.min.css' rel='stylesheet'>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -20,7 +20,7 @@
 
 
     <title>{% block title%} {%endblock%}</title>
-</head>è
+</head>
 
 <body>
     <div class="a4_container-fluid">
@@ -50,8 +50,8 @@
             </div>
             <div class="a4_menu_mobil">
                 <div class="a4_block_burger">
-                    <img src="{% static 'static_alert/assets/nav_footer/menu.png' %}"" alt=" menu_buger" class="a4_burger"
-                        title="menu_buger">
+                    <img src="{% static 'static_alert/assets/nav_footer/menu.png' %}" alt=" menu_buger" class="a4_burger"
+                    title="menu_buger">
                 </div>
                 <div class="a4_menu_show">
                     <ul>
