--- a/website/all4animals/alert/templates/alert/index.html
+++ b/website/all4animals/alert/templates/alert/index.html
@@ -3,7 +3,7 @@
 
 
 {% block link%} 
-<link rel="stylesheet" href="{% static 'css/index.css' %}">
+<link rel="stylesheet" href="{% static 'static_alert/css/index.css' %}">
 {%endblock%}
 
 {% block title%}
@@ -20,13 +20,13 @@ Index
         <a href="/alerte">
             <div class="a4_container_home">
                 <div class="a4_writing">
-                    <img src="{% static 'assets\home\alert\alert.png' %}" alt="writing'alert" title="Alerte">
+                    <img src="{% static 'static_alert\assets\home\alert\alert.png' %}" alt="writing'alert" title="Alerte">
                 </div>
                 <br>
                 <div class="a4_container_img_alert">
-                    <img src="{% static 'assets\home\alert\dog.png' %}" alt="dog" title="Alerte">
-                    <img src="{% static 'assets\home\alert\warning.png' %}" alt="warning" title="Alerte">
-                    <img src="{% static 'assets\home\alert\cat.png' %}" alt="cat'alart" title="Alerte">
+                    <img src="{% static 'static_alert\assets\home\alert\dog.png' %}" alt="dog" title="Alerte">
+                    <img src="{% static 'static_alert\assets\home\alert\warning.png' %}" alt="warning" title="Alerte">
+                    <img src="{% static 'static_alert\assets\home\alert\cat.png' %}" alt="cat'alart" title="Alerte">
                 </div>
             </div>
         </a>
@@ -34,13 +34,13 @@ Index
         <a href="\annonce">
             <div class="a4_container_home">
                 <div class="a4_writing">
-                    <img src="{% static 'assets\home\ad\writing.png' %}" alt="writing'ad" title="Alerte">
+                    <img src="{% static 'static_alert\assets\home\ad\writing.png' %}" alt="writing'ad" title="Alerte">
                 </div>
                 <br>
                 <div class="a4_container_img_alert">
-                    <img src="{% static 'assets\home\ad\lost.png' %}" alt="lost" title="publication">
-                    <img src="{% static 'assets\home\ad\see.png' %}" alt="see" title="publication">
-                    <img src="{% static 'assets\home\ad\find.png' %}" alt="find" title="publication">
+                    <img src="{% static 'static_alert\assets\home\ad\lost.png' %}" alt="lost" title="publication">
+                    <img src="{% static 'static_alert\assets\home\ad\see.png' %}" alt="see" title="publication">
+                    <img src="{% static 'static_alert\assets\home\ad\find.png' %}" alt="find" title="publication">
                 </div>
             </div>
         </a>
@@ -48,13 +48,13 @@ Index
         <a href="\hebergement">
             <div class="a4_container_home">
                 <div class="a4_writing">
-                    <img src="{% static 'assets\home\housing\writing.png' %}" alt="writing'ad" title="Alerte">
+                    <img src="{% static 'static_alert\assets\home\housing\writing.png' %}" alt="writing'ad" title="Alerte">
                 </div>
                 <br>
                 <div class="a4_container_img_alert">
-                    <img src="{% static 'assets\home\housing\profil.png' %}" alt="profil" title="hébergement">
-                    <img src="{% static 'assets\home\housing\house.png' %}" alt="house" title="hébergement">
-                    <img src="{% static 'assets\home\housing\dog.png' %}" alt="dog" title="hébergement">
+                    <img src="{% static 'static_alert\assets\home\housing\profil.png' %}" alt="profil" title="hébergement">
+                    <img src="{% static 'static_alert\assets\home\housing\house.png' %}" alt="house" title="hébergement">
+                    <img src="{% static 'static_alert\assets\home\housing\dog.png' %}" alt="dog" title="hébergement">
                 </div>
             </div>
         </a>
