--- a/website/all4animals/alert/templates/alert/alert.html
+++ b/website/all4animals/alert/templates/alert/alert.html
@@ -1,4 +1,5 @@
 {% extends 'alert/base.html' %}
+{% load static %}
 
 {% block title%}
 Alerte
@@ -93,9 +94,13 @@ Alerte
                 <label for="photo">Photo</label>
                 <input type="file" class="form-control-file" id="photo" aria-describedby="fileHelp" name="photo">
             </div>
-            <button type="submit" class="btn btn-primary">Valider</button>
-        </fieldset>
-    </form>
+            <div class="form-group a4_block_submit">
+                <button type="submit" class="btn btn-primary">Valider</button>
+                <img src="{% static 'static_alert\assets\alerte\dog_and_cat.png' %}" alt="dog" title="Alerte">
+            </div>
+</div>
+</fieldset>
+</form>
 </div>
 <br>
 <br>
