--- a/website/all4animals/static/static_alert/css/contact_form.css
+++ b/website/all4animals/static/static_alert/css/contact_form.css
@@ -1,6 +1,8 @@
 @media (min-width: 992px) {
     .a4_form_contact {
-        max-width: 1500px !important;
-        width: 100% !important;
+        padding: 30px;
+        border: 1px solid black;
+        border-radius: 25px;
+        margin-bottom: 25px;
     }
 }
