--- a/website/all4animals/housing/templates/housing/login.html
+++ b/website/all4animals/housing/templates/housing/login.html
@@ -33,7 +33,7 @@ Login
                     </div>
                     <div class="a4_block_login">
                         <label for="uname">Saisissez votre e-mail</label>
-                        <input type="text" placeholder="E-mail" name="uname" required>
+                        <input type="text" placeholder="E-mail" name="name" required>
                     </div>
                     <div class="a4_block_login">
                         <label for="psw">Saisissez votre mot de passe </label>
