--- a/website/all4animals/housing/templates/housing/login.html
+++ b/website/all4animals/housing/templates/housing/login.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block link%}
-<link rel="stylesheet" href="{% static 'css/login.css' %}">
+<link rel="stylesheet" href="{% static 'static_housing/css/login.css' %}">
 {%endblock%}
 
 {% block script%}
