--- a/website/all4animals/registration/templates/registration/login.html
+++ b/website/all4animals/registration/templates/registration/login.html
@@ -6,7 +6,7 @@
 {%endblock%}
 
 {% block script%}
-<script type="text/javascript" src="{% static 'js/login.js' %}"></script>
+<script type="text/javascript" src="{% static 'static_housing/js/login.js' %}"></script>
 {%endblock%}
 
 {% block title%}
@@ -23,17 +23,23 @@ Login
         </ul>
     </div>
     <div class="a4_login_connection">
-        <form action="/login" method="get">
-            <fieldset>
+        <form action="/login/" method="POST">
+            {% csrf_token %}
+            <!-- Insérer le formulaire -->
+            {{ form.as_p}}
+            <!-- <fieldset>
+
                 <div class="a4_container_login">
                     <div class="a4_block_login">
                         <p>Connectez-vous avec votre adresse email et votre mot de passe pour accéder à votre espace
                             client.
                         </p>
+
                     </div>
                     <div class="a4_block_login">
                         <label for="uname">Saisissez votre e-mail</label>
-                        <input type="text" placeholder="E-mail" name="name" required>
+                        <input type="text" placeholder="E-mail" name="uname" required>
+
                     </div>
                     <div class="a4_block_login">
                         <label for="psw">Saisissez votre mot de passe </label>
@@ -54,6 +60,7 @@ Login
     <div class="a4_login_registration">
         <form action="/login" method="get">
             <fieldset>
+
                 <div class="a4_container_login">
                     <div class="a4_email_pseudo">
                         <div class="a4_block_login">
@@ -90,11 +97,12 @@ Login
                             <input type="checkbox" checked="checked" name="remember"> Remember me
                         </label>
                     </div>
-                    <div class="a4_block_login">
-                        <button type="submit">Valider</button>
-                    </div>
+
                 </div>
-            </fieldset>
+            </fieldset> -->
+            <div class="a4_block_login">
+                <button type="submit">Valider</button>
+            </div>
         </form>
     </div>
 
